--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@enso-ui/select": "^1.0.2",
     "@enso-ui/switch": "^1.0.2",
     "@enso-ui/tabs": "^1.0.5",
+    "@enso-ui/wysiwyg": "^1.0.0",
     "@fortawesome/fontawesome-free": "^5.2.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.2",
     "@fortawesome/free-solid-svg-icons": "^5.2.0",
@@ -51,7 +52,7 @@
     "bulma": "^0.7.2",
     "dropzone": "^5.5.1",
     "lodash": "^4.17.10",
-    "tiptap": "^1.13.0",
+    "tiptap": "^1.14.0",
     "tiptap-extensions": "^1.13.0",
     "v-tooltip": "^2.0.0-rc.33",
     "vue": "^2.5.16",
