updates deps constraints

--- a/package.json
+++ b/package.json
@@ -35,15 +35,15 @@
     "webpack-cli": "^3.2.1"
   },
   "dependencies": {
-    "@enso-ui/datepicker": "~1.0.5",
-    "@enso-ui/directives": "~1.0.1",
-    "@enso-ui/divider": "~1.0.0",
-    "@enso-ui/modal": "~1.0.4",
-    "@enso-ui/money": "~1.0.0",
-    "@enso-ui/select": "~1.1.0",
-    "@enso-ui/switch": "~1.0.2",
-    "@enso-ui/tabs": "~1.0.5",
-    "@enso-ui/wysiwyg": "~1.0.0",
+    "@enso-ui/datepicker": "1.0.x",
+    "@enso-ui/directives": "1.0.x",
+    "@enso-ui/divider": "1.0.x",
+    "@enso-ui/modal": "1.0.x",
+    "@enso-ui/money": "1.0.x",
+    "@enso-ui/select": "1.1.x",
+    "@enso-ui/switch": "1.0.x",
+    "@enso-ui/tabs": "1.0.x",
+    "@enso-ui/wysiwyg": "1.0.x",
     "@fortawesome/fontawesome-free": "^5.2.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.2",
     "@fortawesome/free-solid-svg-icons": "^5.2.0",
