--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "@enso-ui/divider": "1.0.x",
     "@enso-ui/modal": "1.0.x",
     "@enso-ui/money": "1.0.x",
-    "@enso-ui/select": "1.1.x",
+    "@enso-ui/select": "1.2.x",
     "@enso-ui/switch": "1.0.x",
     "@enso-ui/tabs": "1.0.x",
     "@enso-ui/wysiwyg": "1.0.x",
@@ -53,26 +53,12 @@
     "@vue/cli-plugin-babel": "^4.0.5",
     "@vue/cli-plugin-eslint": "^4.0.5",
     "@vue/cli-service": "^4.0.5",
-    "@vue/eslint-config-airbnb": "^4.0.0",
+    "@vue/eslint-config-airbnb": "^5.0.0",
     "autoprefixer": "^9.6.1",
     "babel-eslint": "^10.0.1",
-    "cross-env": "^5.1.6",
-    "cssnano": "^4.1.10",
-    "eslint": "^5.16.0",
+    "cross-env": "^6.0.0",
+    "eslint": "^6.8.0",
     "eslint-import-resolver-alias": "^1.1.2",
-    "eslint-plugin-vue": "^5.0.0",
-    "file-loader": "^1.1.11",
-    "ignore-assets-webpack-plugin": "^2.0.1",
-    "mini-css-extract-plugin": "^0.8.0",
-    "node-sass": "^4.9.0",
-    "postcss-cssnext": "^3.1.0",
-    "postcss-import": "^12.0.1",
-    "postcss-loader": "^3.0.0",
-    "sass": "^1.22.12",
-    "sass-loader": "^8.0.0",
-    "style-loader": "^1.0.0",
-    "sugarss": "^2.0.0",
-    "vue-loader": "^15.7.1",
-    "vue-template-compiler": "^2.6.10"
+    "eslint-plugin-vue": "^6.0.0"
   }
 }
