--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@enso-ui/datepicker": "1.1.x",
     "@enso-ui/directives": "1.0.x",
     "@enso-ui/divider": "1.0.x",
+    "@enso-ui/laravel-validation": "1.0.x",
     "@enso-ui/modal": "1.0.x",
     "@enso-ui/money": "1.0.x",
     "@enso-ui/select": "1.2.x",
