--- a/package.json
+++ b/package.json
@@ -25,16 +25,16 @@
   },
   "homepage": "https://github.com/enso-ui/forms#readme",
   "dependencies": {
-    "@enso-ui/datepicker": "1.1.x",
-    "@enso-ui/directives": "1.0.x",
-    "@enso-ui/divider": "1.0.x",
-    "@enso-ui/laravel-validation": "1.0.x",
-    "@enso-ui/modal": "1.0.x",
-    "@enso-ui/money": "1.0.x",
-    "@enso-ui/select": "1.2.x",
-    "@enso-ui/switch": "1.0.x",
-    "@enso-ui/tabs": "1.0.x",
-    "@enso-ui/wysiwyg": "1.0.x",
+    "@enso-ui/datepicker": "^1.1",
+    "@enso-ui/directives": "^1.0",
+    "@enso-ui/divider": "^1.0",
+    "@enso-ui/laravel-validation": "^1.0",
+    "@enso-ui/modal": "^2.0",
+    "@enso-ui/money": "^1.0",
+    "@enso-ui/select": "^2.0",
+    "@enso-ui/switch": "^1.0",
+    "@enso-ui/tabs": "^1.0",
+    "@enso-ui/wysiwyg": "^1.0",
     "@fortawesome/fontawesome-free": "^5.2.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.2",
     "@fortawesome/free-solid-svg-icons": "^5.2.0",
