--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@enso-ui/forms",
-  "version": "3.0.2",
+  "version": "3.0.3",
   "description": "Forms",
   "main": "index.js",
   "scripts": {
@@ -38,6 +38,7 @@
     "@fortawesome/fontawesome-free": "^5.2.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.2",
     "@fortawesome/free-solid-svg-icons": "^5.2.0",
+    "@fortawesome/vue-fontawesome": "3.0.0-5",
     "bulma": "^0.9.0",
     "lodash": "^4.17.10",
     "v-tooltip": "4.0.0-alpha.1",
